# japanese-tfidf-embedder

./: .gitignore  .npmignore  CLAUDE.md  Cargo.toml  README.md  package.json
.github/workflows/: github-pages.yml
examples/: basic_usage.html  dictionary_demo.html  incremental_demo.html  index.html  training_search_demo.html
src/: incremental.rs  lib.rs  stable_hash.rs  tfidf_lsa.rs  tokenizer.rs  utils.rs
