[package]
name = "japanese-tfidf-embedder"
version = "0.1.0"
edition = "2021"
authors = ["satetsu888"]
description = "Japanese text vectorization using TF-IDF + LSA with n-gram tokenization and custom dictionary support"
license = "MIT"
repository = "https://github.com/satetsu888/japanese-tfidf-embedder"
homepage = "https://github.com/satetsu888/japanese-tfidf-embedder"
keywords = ["japanese", "tfidf", "lsa", "nlp", "wasm"]
categories = ["text-processing", "wasm", "algorithms"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc", "console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
nalgebra = { version = "0.32", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Performance",
    "Window",
    "Document",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"  # Size optimization
lto = true
codegen-units = 1
